tests/NormalTests/paczka1/fuzzy1/46286117.err
Error in line 2: lCT A592 27,4
Error in line 1: AD0zzCqY A294 99,8
Error in line 3: lCT S598 18,0
Error in line 22: A592 S305 0,9
Error in line 32: apfRyXj A294 89,1
Error in line 31: Wq8D A592 64,9
